--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-.vscode/launch.json
 
 # Include override files you do wish to add to version control using negated pattern
 #
@@ -31,3 +30,6 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Visual Studio code
+.vscode
