--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Visual Studio code
+.vscode
+
+# Binary
+bin
